<resources>
    <string name="app_name">TechnicalTestIntern-2</string>

    <string name="login_text">Login</string>
    <string name="user_text">Username Anda</string>
    <string name="pass_text">Password Anda</string>
    <string name="login_btn_text">MASUK</string>
    <string name="forget_pass_txt">Lupa password?</string>
    <string name="user_profile">User Profile Image</string>
    <string name="placeholder_user_text">CS Telkomsel</string>
    <string name="placeholder_number_text">081293551227</string>
    <string name="edit_user">Edit User</string>
    <string name="delete_user">Delete user</string>
    <string name="back_image_button_desc">back</string>
    <string name="list_contact_text">Contact List</string>
    <string name="login_failed">Username atau Password salah</string>
    <string name="back_desc">Kembali Kehalaman Sebelumnya</string>
    <string name="students_text">Students</string>
    <string name="welcome_text">Selamat Datang</string>
    <string name="delete_desc">Delete Data</string>
    <string name="desc_wave_bg">Decoration Wave</string>
    <string name="nameText">Nama</string>
    <string name="addressText">Alamat</string>
    <string name="tambah_data">tambah data</string>
    <string name="delete_confirmation_text">Are you sure you want to delete this student?</string>
    <string name="delete_dialog_text">Delete Student</string>
    <string name="add_dialog_text">Add Student</string>
    <string name="empty_text">no data found</string>
</resources>