<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@android:color/white"
    android:layout_marginBottom="4dp"
    android:elevation="2dp">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_person"
        app:tint="@color/gray"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/user_profile" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_user_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_number_text"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/darkGray" />
    </LinearLayout>

</LinearLayout>
