<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/textLogin"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_text">

        <com.google.android.material.textfield.TextInputEditText
            tools:ignore="VisualLintTextFieldSize"
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray"
        android:hint="@string/pass_text">

        <com.google.android.material.textfield.TextInputEditText
            tools:ignore="VisualLintTextFieldSize"
            android:id="@+id/passEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:autofillHints="password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:text="@string/forget_pass_txt"
        android:textColor="@color/blue"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        tools:ignore="VisualLintButtonSize"
        android:id="@+id/btn_login"
        style="@style/Widget.MaterialComponents.Button"
        android:backgroundTint="@color/lightGray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:text="@string/login_btn_text" />
</LinearLayout>